craco bug fixed

--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,7 @@
   },
   "scripts": {
     "start": "craco start",
-    "build": "GENERATE_SOURCEMAP=false npx react-scripts build",
+    "build": "GENERATE_SOURCEMAP=false craco build",
     "test": "craco test",
     "eject": "react-scripts eject"
   },
